# orchestration_ml

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
airflow/: webserver_config.py
dags/: batch_predict.py  retrain.py
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.data  Dockerfile.frontend  Dockerfile.train  download_data.sh
frontend/: app.py
frontend/.streamlit/: config.toml
models/: best_model.joblib
src/lending/: api.py  config.py  data.py  evaluate.py  features.py  tracking.py  train.py  train_models.py  train_optuna.py
tests/: test_api.py  test_data.py  test_evaluate.py  test_features.py  test_tracking.py  test_train.py  test_train_models.py  test_train_optuna.py
tests/fixtures/processed/: 2012.csv
