[project]
name = "mlops-lending-club"
version = "0.1.0"
description = "Projet fil rouge - Orchestration Machine Learning (ESGI)"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "polars>=1.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "mlflow>=2.12",
  "xgboost-cpu>=2.1",
  "lightgbm>=4.3",
  "python-dotenv>=1.0",
]
train = [
  "scikit-learn>=1.4",
  "pandas>=2.0",
  "numpy>=1.26",
  "joblib>=1.3",
  "mlflow>=2.12",
  "optuna>=3.6",
  "xgboost-cpu>=2.1",
  "lightgbm>=4.3",
  "python-dotenv>=1.0",
  "polars>=1.0",
]
data = [
  "polars>=1.0",
  "python-dotenv>=1.0",
]
frontend = [
  "streamlit>=1.30",
  "httpx>=0.27",
]
gpu = ["numba>=0.61", "llvmlite>=0.44"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff",
  "mypy",
  "mlflow>=2.12",
  "polars>=1.0",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "xgboost-cpu>=2.1",
  "lightgbm>=4.3",
  "optuna>=3.6",
  "pandas>=2.0",
  "numpy>=1.26",
  "fastapi>=0.110",
  "httpx>=0.27",
  "httpx2>=2.4.0",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lending"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"

# Le stack scientifique ne fournit pas de stubs de types : on ignore les
# imports non types pour ces librairies, tout en gardant mypy strict sur src/.
[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "pandas.*",
  "joblib.*",
  "mlflow.*",
  "optuna.*",
  "shap.*",
  "xgboost.*",
  "lightgbm.*",
  "streamlit.*",
  "pymysql.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
